# MachinDeOuf

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md
.claude/: session-intent.md  session-plan.md  settings.local.json
.claude/hooks/: governance-check.sh  pipeline-validate.sh
.github/workflows/: adversarial-qa.yml  ci.yml  submodule-auto-update.yml  wiki-sync.yml
.zed/: settings.json  tasks.json
crates/ga-chatbot/: Cargo.toml
crates/ix-adversarial/: Cargo.toml
crates/ix-agent/: Cargo.toml
crates/ix-agent-core/: Cargo.toml
crates/ix-agent-core/src/: action.rs  beliefs.rs  context.rs  error.rs  event.rs  handler.rs  lib.rs  middleware.rs
crates/ix-autograd/: Cargo.toml
crates/ix-autograd/examples/: minimize_linreg_mse.rs
crates/ix-autograd/src/: lib.rs  mode.rs  ops.rs  ops_fft.rs  tape.rs  tensor.rs  tool.rs
crates/ix-autograd/src/tools/: linear_regression.rs  mod.rs  mse_loss.rs  stats_mean.rs
crates/ix-autograd/tests/: finite_diff.rs
crates/ix-bracelet/: Cargo.toml
crates/ix-cache/: Cargo.toml
crates/ix-category/: Cargo.toml
crates/ix-chaos/: Cargo.toml
crates/ix-chaos/src/: de_rham.rs  embedding.rs  poincare_map.rs  takagi.rs
crates/ix-context/: Cargo.toml
crates/ix-context/src/: cache.rs  index.rs  lib.rs  mcp.rs  model.rs  resolve.rs  walk.rs
crates/ix-dashboard/: Cargo.toml
crates/ix-dashboard/src/: app.rs  main.rs  reader.rs  state.rs  views.rs
crates/ix-demo/: Cargo.toml
crates/ix-dynamics/: Cargo.toml
crates/ix-ensemble/: Cargo.toml
crates/ix-ensemble/src/: lib.rs  random_forest.rs
crates/ix-evolution/: Cargo.toml
crates/ix-evolution/src/: lib.rs
crates/ix-fractal/: Cargo.toml
crates/ix-friday-brief/: Cargo.toml
crates/ix-friday-brief/src/: lib.rs  main.rs
crates/ix-friday-brief/tests/: smoke.rs
crates/ix-fuzzy/: Cargo.toml
crates/ix-fuzzy/src/: builder.rs  distribution.rs  error.rs  hexavalent.rs  lib.rs  observations.rs  ops.rs
crates/ix-game/: Cargo.toml
crates/ix-gpu/: Cargo.toml
crates/ix-gpu/src/: context.rs  distance.rs  knn.rs  quaternion.rs  rips.rs  sedenion.rs
crates/ix-grammar/: Cargo.toml
crates/ix-graph/: Cargo.toml
crates/ix-graph/src/: graph.rs  lib.rs  state_space.rs
crates/ix-harness-cargo/: Cargo.toml
crates/ix-harness-cargo/src/: lib.rs  main.rs
crates/ix-harness-clippy/: Cargo.toml
crates/ix-harness-clippy/src/: lib.rs  main.rs
crates/ix-harness-ga/: Cargo.toml
crates/ix-harness-ga/src/: lib.rs  main.rs
crates/ix-harness-github-actions/: Cargo.toml
crates/ix-harness-github-actions/src/: lib.rs  main.rs
crates/ix-harness-signing/: Cargo.toml
crates/ix-harness-signing/src/: lib.rs
crates/ix-invariant-coverage/: Cargo.toml
crates/ix-io/: Cargo.toml
crates/ix-ktheory/: Cargo.toml
crates/ix-loop-detect/: Cargo.toml
crates/ix-math/: Cargo.toml
crates/ix-memory/: Cargo.toml
crates/ix-memory/src/: dna.rs  hrr.rs  lib.rs  mem_file.rs  sedenion_sig.rs
crates/ix-nn/: Cargo.toml
crates/ix-nn/src/: attention.rs  classifier.rs  lib.rs  loss.rs  positional.rs  transformer.rs
crates/ix-number-theory/: Cargo.toml
crates/ix-optick/: Cargo.toml
crates/ix-optick/benches/: search.rs
crates/ix-optick/src/: lib.rs
crates/ix-optick/tests/: conformance.rs
crates/ix-optimize/: Cargo.toml
crates/ix-optimize/src/: gradient.rs  lib.rs  pso.rs  traits.rs
crates/ix-pipeline/: Cargo.toml
crates/ix-probabilistic/: Cargo.toml
crates/ix-quality-trend/: Cargo.toml
crates/ix-quality-trend/src/: lib.rs  main.rs  report.rs  snapshot.rs  trend.rs
crates/ix-registry/: Cargo.toml
crates/ix-registry/src/: lib.rs
crates/ix-registry/tests/: smoke.rs
crates/ix-rl/: Cargo.toml
crates/ix-rl/src/: bandit.rs  lib.rs  q_learning.rs
crates/ix-rotation/: Cargo.toml
crates/ix-rotation/src/: axis_angle.rs  euler.rs  lib.rs  plucker.rs  quaternion.rs  rotation_matrix.rs  slerp.rs
crates/ix-search/: Cargo.toml
crates/ix-sedenion/: Cargo.toml
crates/ix-session/: Cargo.toml
crates/ix-session/src/: errors.rs  lib.rs  log.rs  sink.rs
crates/ix-session/tests/: session_log.rs
crates/ix-signal/: Cargo.toml
crates/ix-signal/src/: kalman.rs  lib.rs  sampling.rs  spectral.rs  wavelet.rs
crates/ix-skill/: Cargo.toml
crates/ix-skill-macros/: Cargo.toml
crates/ix-skill-macros/src/: lib.rs
crates/ix-supervised/: Cargo.toml
crates/ix-supervised/src/: knn.rs  lib.rs  linear_regression.rs  logistic_regression.rs  metrics.rs
crates/ix-topo/: Cargo.toml
crates/ix-types/: Cargo.toml
crates/ix-types/src/: lib.rs  traits.rs
crates/ix-unsupervised/: Cargo.toml
crates/ix-unsupervised/src/: dbscan.rs  kernel_pca.rs  kmeans.rs  lda.rs  lib.rs  mds.rs  nmf.rs  traits.rs
crates/ix-voicings/: Cargo.toml
crates/machin-adversarial/: Cargo.toml
crates/machin-agent/: Cargo.toml
crates/machin-cache/: Cargo.toml
crates/machin-chaos/: Cargo.toml
crates/machin-demo/: Cargo.toml
crates/machin-ensemble/: Cargo.toml
crates/machin-evolution/: Cargo.toml
crates/machin-fractal/: Cargo.toml
crates/machin-game/: Cargo.toml
crates/machin-gpu/: Cargo.toml
crates/machin-grammar/: Cargo.toml
crates/machin-graph/: Cargo.toml
crates/machin-io/: Cargo.toml
crates/machin-math/: Cargo.toml
crates/machin-nn/: Cargo.toml
crates/machin-number-theory/: Cargo.toml
crates/machin-optimize/: Cargo.toml
crates/machin-pipeline/: Cargo.toml
crates/machin-probabilistic/: Cargo.toml
crates/machin-rl/: Cargo.toml
crates/machin-rotation/: Cargo.toml
crates/machin-search/: Cargo.toml
crates/machin-sedenion/: Cargo.toml
crates/machin-signal/: Cargo.toml
crates/machin-skill/: Cargo.toml
crates/machin-supervised/: Cargo.toml
crates/machin-unsupervised/: Cargo.toml
crates/memristive-markov/: Cargo.toml
docs/: FEDERATION.md  INDEX.md  MANUAL.md
docs/adversarial-ml/: adversarial-defenses.md  data-poisoning.md  differential-privacy.md  fgsm-and-pgd.md
docs/books/: chord-voicings-study.md
docs/brainstorms/: 2026-03-12-comprehensive-docs-brainstorm.md  (+9 more)
scripts/: harness-remediate.sh
(+519 files in other folders)
