[package]
name = "ix-autograd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Reverse-mode automatic differentiation for IX pipelines"
repository.workspace = true

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3 = "1.5"
ix-signal = { workspace = true, optional = true }

[features]
default = []
# Day 5: FFT forward + Hermitian-mirror backward via ix-signal.
# Off by default because the backward has subtle DC/Nyquist edge cases
# and we want explicit opt-in until cross-checked against JAX rfft grad.
fft-autograd = ["dep:ix-signal"]

[dev-dependencies]
approx = "0.5"
criterion.workspace = true

[[bench]]
name = "bench_ops"
harness = false
