[package]
name = "ix-chaos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chaos theory: Lyapunov exponents, bifurcation, attractors, fractal dimensions"

[dependencies]
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
