[package]
name = "ix-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools", "parsing"]
keywords = ["context", "code-analysis", "dag", "retrieval", "governance"]
description = "Deterministic structural context DAG over Rust code — a governance instrument disguised as a retrieval system"

[dependencies]
# Core serialization
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Tree-sitter for project-wide AST walk (beyond ix-code's per-file scope)
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
streaming-iterator = "0.1"

# Git trajectory bridge
git2 = { workspace = true }

# File-change invalidation
notify = { workspace = true }

# Internal dependencies
ix-code = { workspace = true, features = ["semantic", "trajectory", "gates"] }
ix-pipeline = { workspace = true }
ix-cache = { workspace = true }
ix-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
