[package]
name = "ix-ensemble"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ensemble methods: random forest, boosting, bagging"

[dependencies]
ix-math = { workspace = true }
ix-supervised = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
