[package]
name = "ix-friday-brief"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities"]
keywords = ["friday-brief", "pipeline", "governance", "ix"]
description = "Friday Brief MVP: weekly team brief pipeline over a synthetic fixture, NotebookLM upload stubbed"

[dependencies]
ix-pipeline = { workspace = true }
ix-sanitize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[[bin]]
name = "ix-friday-brief"
path = "src/main.rs"
