[package]
name = "ix-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU-accelerated compute via WGPU: cosine similarity, matrix ops, vector search"

[dependencies]
wgpu = "28"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
ndarray = { workspace = true }
