[package]
name = "ix-harness-cargo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
keywords = ["governance", "harness", "cargo", "observation", "demerzel"]
description = "Harness adapter: cargo test JSON output → HexObservation JSONL for the Path C substrate"

[[bin]]
name = "ix-harness-cargo"
path = "src/main.rs"

[dependencies]
ix-agent-core = { workspace = true }
ix-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
