[package]
name = "ix-harness-clippy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["governance", "harness", "clippy", "observation", "demerzel"]
description = "Harness adapter: cargo clippy JSON output → HexObservation JSONL for the Path C substrate"

[[bin]]
name = "ix-harness-clippy"
path = "src/main.rs"

[dependencies]
ix-agent-core = { workspace = true }
ix-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
