[package]
name = "ix-harness-ga"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["command-line-utilities", "science"]
keywords = ["governance", "harness", "ga", "observation", "demerzel"]
description = "Harness adapter stub: Guitar Alchemist governance events → HexObservation JSONL (canonical NDJSON input, ga-side shim TBD)"

[[bin]]
name = "ix-harness-ga"
path = "src/main.rs"

[dependencies]
ix-agent-core = { workspace = true }
ix-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
