[package]
name = "ix-harness-signing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["cryptography", "science"]
keywords = ["governance", "signing", "ed25519", "harness", "demerzel"]
description = "Canonical serialization + detached Ed25519 signatures for HexObservations (Tier 1+ harness adapters)"

[dependencies]
ix-fuzzy = { workspace = true }
ix-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = "2.1"
rand = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
