[package]
name = "ix-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["algorithms", "data-structures", "science"]
keywords = ["memory", "holographic", "hypercomplex", "compression"]
description = "Experimental compact memory formats for session history over mathematical spaces"

[dependencies]
ix-sedenion = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
