[package]
name = "ix-optick"
version = "0.1.0"
edition = "2021"
description = "Memory-mapped OPTIC-K index reader with brute-force cosine search"
license = "MIT"
repository = "https://github.com/GuitarAlchemist/ix"

[dependencies]
memmap2 = "0.9"
thiserror = "2"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
crc32fast = "1"
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tempfile = { workspace = true }
rmp-serde = "1"
criterion = { workspace = true }

[[bench]]
name = "search"
harness = false
