[package]
name = "ix-optimize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optimization algorithms: gradient descent, simulated annealing, PSO"

[dependencies]
ix-math = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
