[package]
name = "ix-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools"]
keywords = ["machine-learning", "registry", "mcp"]
description = "Link-time capability registry unifying CLI, MCP server, and UI surfaces for ix skills"

[dependencies]
ix-types = { workspace = true }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ix-skill-macros = { workspace = true }
