[package]
name = "ix-rl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reinforcement learning: Q-learning, bandits, policy gradient"

[dependencies]
ix-math = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }
