[package]
name = "ix-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["development-tools", "database-implementations"]
keywords = ["session", "event-log", "jsonl", "append-only", "replay"]
description = "JSONL-backed append-only session log for ix-agent-core — primitive #4 of the harness primitives roadmap"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ix-agent-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
