[package]
name = "ix-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signal processing: FFT, wavelets, filters, spectral analysis, Kalman"

[dependencies]
ix-math = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
