[package]
name = "ix-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories = ["data-structures", "science"]
keywords = ["machine-learning", "types", "pipeline"]
description = "Shared value lattice and socket types for the ix skill registry"

[dependencies]
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
approx = "0.5"
